<?xml version="1.0"?>
<package>
  <name>mrb_sensor_msgs</name>
  <version>0.0.0</version>
  <description>The matlab_ros_bridge plugin package for sensor_msgs</description>

  <maintainer email="riccardo.spica@irisa.fr">Riccardo Spica</maintainer>
  <maintainer email="giovanni.claudio@inria.fr">Giovanni Claudio</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/matlab_ros_bridge</url>

  <author email="riccardo.spica@inria.fr">Riccardo Spica</author>
  <author email="me@riedel-privat.de">Martin Riedel</author> 

  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>matlab_ros_bridge</build_depend>
  <build_depend>cmake_module_matlab</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>matlab_ros_bridge</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->
    <matlab_ros_bridge mdl_path="models/sensor_msgs" />
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
